adding in some movie detail activity related code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">moviebuffs</string>
-    <string name="api_key"></string>
+    <string name="api_key">b2cacc567a4d73b94ca6d1e02aee273e</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
